<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">知乎</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_default_title">知乎</string>
    <!--start page-->
    <string name="start_slogan">与世界分享你的知识、经验和见解</string>
    <string name="start_slogan_name">- 知乎 -</string>
    <!-- 登陆界面 -->
    <string name="login_name">用户名</string>
    <string name="login_pwd">密码</string>
    <string name="login_btn">登录</string>
    <string name="login_captcha">验证码</string>
    <string name="account_empty">请输入账号密码</string>

    <!-- 首页 -->
    <string name="from">来自</string>
    <string name="question">问题/文章标题</string>
    <string name="vote">11</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="content">回答缩略</string>
    <!-- answer -->
    <string name="share">分享</string>
    <string name="thank">感谢</string>
    <string name="useless">没有帮助</string>
    <string name="comments">评论</string>
    <string name="name">name</string>
    <string name="intro">intro</string>
    <string name="anonymous">匿名用户</string>
    <string name="answer_vote">赞同</string>

    <!-- menu -->
    <string name="menu_home_token">My Token</string>
    <string name="menu_answer_tip_off">举报</string>
    <string name="menu_answer_font_size">字体</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- version name -->
    <!--<string name="app_version_name">{version}</string>-->

    <array name="font_size_array">
        <item>小</item>
        <item>普通</item>
        <item>大</item>
        <item>超大</item>
    </array>
</resources>