<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="LoginViewBinding">

        <variable
            name="user"
            type="com.bill.zhihu.model.login.User"/>

        <variable
            name="vm"
            type="com.bill.zhihu.vm.LoginVM"/>
    </data>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/global_margin_32"
            android:layout_marginRight="@dimen/global_margin_32"
            android:layout_marginTop="@dimen/global_margin_64"
            android:hint="@string/login_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:theme="@style/LoginInputTextStyle"
            app:hintTextAppearance="@style/LoginInputTextStyle.Text">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:addTextChangedListener="@{user.accountWatcher}"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/global_margin_32"
            android:layout_marginRight="@dimen/global_margin_32"
            android:hint="@string/login_pwd"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:theme="@style/LoginInputTextStyle"
            app:hintTextAppearance="@style/LoginInputTextStyle.Text">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:addTextChangedListener="@{user.pwdWatcher}"
                android:inputType="textPassword"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_btn"
            style="@style/LoginButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="@dimen/global_margin_32"
            android:layout_marginRight="@dimen/global_margin_32"
            android:layout_marginTop="@dimen/global_margin_32"
            android:onClick="@{vm.onClickLogin}"
            android:text="@string/login_btn"
            android:textSize="@dimen/font_22"/>

    </android.support.v7.widget.LinearLayoutCompat>
</layout>